Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83785

CSS opacity animation breaks CSS filter if viz display compositor is disabled

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.1
    • 5.14.2, 5.15.0 Beta4
    • WebEngine
    • None
    • Linux/X11, Windows
    • 9b21cff6f46d8e98b85996111bd8187ef2e45577 (qt/qtwebengine/5.15)

      It is reproducible with the attached example ( css-animation.html ):

      ./simplebrowser --disable-viz-display-compositor css-animation.html
      

      Move the mouse cursor over the h1 text to reproduce it. The effect of the CSS filter seems to be disabled during the CSS animation:

      It breaks the filter on the parent element too. The rendering looks good after the animation finishes. I can reproduce this with any CSS filter but only if opacity is animated.

      The bug is even more noticeable if software rendering is used:

      QT_QUICK_BACKEND="software" ./simplebrowser --disable-viz-display-compositor css-animation.html
      

      The elements are rendered up-side-down during the animation:

      This up-side-down rendering doesn't happen if QSGInternalImageNode is used instead of QSGImageNode in DelegatedNodeTreeCreator::setupRenderPassNode(). It happens since https://codereview.qt-project.org/c/qt/qtwebengine/+/267566
      Using QSGInternalImageNode doesn't affect the ignored CSS filter problem.

        For Gerrit Dashboard: QTBUG-83785
        # Subject Branch Project Status CR V

            juri.valdmann Jüri Valdmann (Inactive)
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes