src/core/compositor/delegated_frame_node.cpp
@@ -680,7 +680,7 @@ void DelegatedFrameNode::commit(const viz::CompositorFrame &pendingFrame,
             rpLayer->setSize(toQt(pass->output_rect.size()));
             rpLayer->setFormat(pass->has_transparent_background ? GL_RGBA : GL_RGB);
             rpLayer->setHasMipmaps(pass->generate_mipmap);
-            rpLayer->setMirrorVertical(true);
+            rpLayer->setMirrorVertical(false);
             scissorRect = pass->output_rect;
         } else {
             renderPassParent = this;
